about and work sections

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             <nav class="header__nav navbar">
               <a href="#" class="navbar__link">Academy</a>
               <a href="#" class="navbar__link">Blog</a>
-              <a href="#" class="navbar__link">Work</a>
+              <a href="#work" class="navbar__link">Work</a>
               <a href="#" class="navbar__link">Contact</a>
-              <a href="#" class="navbar__link">About</a>
+              <a href="#about" class="navbar__link">About</a>
             </nav>
             <button type="button" class="burger">
               <div class="burger__box">
@@ -41,7 +41,7 @@
                 <h1 class="hero__title">
                   Exploring cities through data analysis and visualization
                 </h1>
-                <div class="hero__text">
+                <div class="hero__text grey-text">
                   Morphocode is a design and development firm that uses data to visualize urban
                   dynamics and provide location insights. Our team brings together expertise across
                   architecture, urban planning, and software engineering.
@@ -50,6 +50,46 @@
               <div class="hero__shape">
                 <div class="hero__image">
                   <img src="./images/hero/hero-image.png" alt="city" />
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section class="about" id="about">
+          <div class="container">
+            <div class="about__body">
+              <div class="about__shape">
+                <div class="about__image">
+                  <img src="./images/about/portfolio-image.png" alt="design" />
+                </div>
+              </div>
+              <div class="about__content">
+                <h2 class="about__title primary-title">We research, design, and develop</h2>
+                <div class="about__text grey-text">
+                  Our portfolio ranges from interactive web maps and information graphics to custom
+                  software tools for data analysis and visualization.
+                </div>
+                <a href="#" class="about__link blue-link">View Projects</a>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section class="work" id="work">
+          <div class="container">
+            <div class="work__body">
+              <div class="work__content">
+                <h2 class="work__title primary-title">Learn with Morphocode</h2>
+                <div class="work__text grey-text">
+                  Morphocode Academy is an online school that covers topics in data visualization,
+                  creative coding, and urban informatics.
+                </div>
+                <a href="#" class="work__link blue-link">Start Learning</a>
+              </div>
+              <div class="work__shape">
+                <div class="work__image">
+                  <img src="./images/work/work-image.png" alt="design" />
                 </div>
               </div>
             </div>
