--- a/index.html
+++ b/index.html
@@ -95,6 +95,101 @@
             </div>
           </div>
         </section>
+
+        <section class="blog">
+          <div class="container">
+            <div class="blog__body">
+              <h3 class="blog__title">From the blog</h3>
+
+              <div class="blog__grid grid-blog">
+                <div class="grid-blog__item">
+                  <div class="grid-blog__shape">
+                    <div class="grid-blog__image">
+                      <img src="./images/blog/blog-01.jpg" alt="design" />
+                    </div>
+                  </div>
+                  <div class="grid-blog__content">
+                    <h3 class="grid-blog__title">The power of interactive tools</h3>
+                    <div class="grid-blog__text">
+                      Tools augment our problem-solving capacity. We rely on them to expand our
+                      minds and provide ease, accuracy, and [...]
+                    </div>
+                  </div>
+                </div>
+                <div class="grid-blog__item">
+                  <div class="grid-blog__shape">
+                    <div class="grid-blog__image">
+                      <img src="./images/blog/blog-02.jpg" alt="design" />
+                    </div>
+                  </div>
+                  <div class="grid-blog__content">
+                    <h3 class="grid-blog__title">The making of Morphocode Explorer</h3>
+                    <div class="grid-blog__text">
+                      Over the last year, we’ve been working on a new web tool for interactive data
+                      exploration [...]
+                    </div>
+                  </div>
+                </div>
+                <div class="grid-blog__item">
+                  <div class="grid-blog__shape">
+                    <div class="grid-blog__image">
+                      <img src="./images/blog/blog-03.jpg" alt="design" />
+                    </div>
+                  </div>
+                  <div class="grid-blog__content">
+                    <h3 class="grid-blog__title">Urban performance measures</h3>
+                    <div class="grid-blog__text">
+                      Urban performance measures help communities make informed decisions and
+                      measure results against goals. [...]
+                    </div>
+                  </div>
+                </div>
+                <div class="grid-blog__item">
+                  <div class="grid-blog__shape">
+                    <div class="grid-blog__image">
+                      <img src="./images/blog/blog-04.jpg" alt="design" />
+                    </div>
+                  </div>
+                  <div class="grid-blog__content">
+                    <h3 class="grid-blog__title">The 5-minute walk</h3>
+                    <div class="grid-blog__text">
+                      The five-minute walk, also known as the “pedestrian shed” is considered to be
+                      the distance people are willing [...]
+                    </div>
+                  </div>
+                </div>
+                <div class="grid-blog__item">
+                  <div class="grid-blog__shape">
+                    <div class="grid-blog__image">
+                      <img src="./images/blog/blog-05.jpg" alt="design" />
+                    </div>
+                  </div>
+                  <div class="grid-blog__content">
+                    <h3 class="grid-blog__title">Location + time: urban data visualization</h3>
+                    <div class="grid-blog__text">
+                      The most common ways to visually organize information are based on location
+                      and time. In this interactive story, [...]
+                    </div>
+                  </div>
+                </div>
+                <div class="grid-blog__item">
+                  <div class="grid-blog__shape">
+                    <div class="grid-blog__image">
+                      <img src="./images/blog/blog-06.jpg" alt="design" />
+                    </div>
+                  </div>
+                  <div class="grid-blog__content">
+                    <h3 class="grid-blog__title">Morphocode in the Best American Infographics</h3>
+                    <div class="grid-blog__text">
+                      We are extremely happy to be included in The Best American Infographics. The
+                      third volume in the series [...]
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
       </main>
 
       <footer class="footer"></footer>
