--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
             </div>
             <nav class="header__nav navbar">
               <a href="#" class="navbar__link">Academy</a>
-              <a href="#" class="navbar__link">Blog</a>
+              <a href="#blog" class="navbar__link">Blog</a>
               <a href="#work" class="navbar__link">Work</a>
-              <a href="#" class="navbar__link">Contact</a>
+              <a href="#contact" class="navbar__link">Contact</a>
               <a href="#about" class="navbar__link">About</a>
             </nav>
             <button type="button" class="burger">
@@ -96,7 +96,7 @@
           </div>
         </section>
 
-        <section class="blog">
+        <section class="blog" id="blog">
           <div class="container">
             <div class="blog__body">
               <h3 class="blog__title">From the blog</h3>
@@ -187,6 +187,29 @@
                   </div>
                 </div>
               </div>
+            </div>
+          </div>
+        </section>
+
+        <section class="contact" id="contact">
+          <div class="container">
+            <div class="contact__body">
+              <div class="contact__content">
+                <h2 class="contact__title primary-title">Start Learning</h2>
+                <div class="contact__text grey-text">
+                  Get the latest articles, tutorials, and free resources from Morphocode
+                </div>
+              </div>
+              <form class="contact__form form-contact">
+                <input
+                  type="email"
+                  class="form-contact__email"
+                  required
+                  autocomplete="off"
+                  placeholder="Enter your email"
+                />
+                <button type="submit" class="form-contact__btn">Subscribe</button>
+              </form>
             </div>
           </div>
         </section>
