fix class names

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
               <img src="./images/header/header-logo.svg" alt="logo" />
             </div>
             <nav class="header__nav navbar">
-              <a href="#" class="navbar__link">Academy</a>
+              <a href="#academy" class="navbar__link">Academy</a>
               <a href="#blog" class="navbar__link">Blog</a>
-              <a href="#work" class="navbar__link">Work</a>
+              <a href="#hero" class="navbar__link">Work</a>
               <a href="#contact" class="navbar__link">Contact</a>
               <a href="#about" class="navbar__link">About</a>
             </nav>
@@ -34,7 +34,7 @@
       </header>
 
       <main class="main">
-        <section class="hero">
+        <section class="hero" id="hero">
           <div class="container">
             <div class="hero__body">
               <div class="hero__content">
@@ -61,7 +61,7 @@
             <div class="about__body">
               <div class="about__shape">
                 <div class="about__image">
-                  <img src="./images/about/portfolio-image.png" alt="design" />
+                  <img src="./images/about/about-image.png" alt="design" />
                 </div>
               </div>
               <div class="about__content">
@@ -76,20 +76,20 @@
           </div>
         </section>
 
-        <section class="work" id="work">
+        <section class="academy" id="academy">
           <div class="container">
-            <div class="work__body">
-              <div class="work__content">
-                <h2 class="work__title primary-title">Learn with Morphocode</h2>
-                <div class="work__text grey-text">
+            <div class="academy__body">
+              <div class="academy__content">
+                <h2 class="academy__title primary-title">Learn with Morphocode</h2>
+                <div class="academy__text grey-text">
                   Morphocode Academy is an online school that covers topics in data visualization,
                   creative coding, and urban informatics.
                 </div>
-                <a href="#" class="work__link blue-link">Start Learning</a>
+                <a href="#" class="academy__link blue-link">Start Learning</a>
               </div>
-              <div class="work__shape">
-                <div class="work__image">
-                  <img src="./images/work/work-image.png" alt="design" />
+              <div class="academy__shape">
+                <div class="academy__image">
+                  <img src="./images/academy/academy-image.png" alt="design" />
                 </div>
               </div>
             </div>
@@ -251,11 +251,15 @@
             <div class="footer__col col-footer">
               <h3 class="col-footer__title">Get to know us</h3>
               <div class="col-footer__links col-footer__links_line">
-                <a href="#" class="col-footer__link">About</a>
-                <a href="#" class="col-footer__link">Contact us</a>
+                <a href="#about" class="col-footer__link">About</a>
+                <a href="#contact" class="col-footer__link">Contact us</a>
               </div>
               <div class="col-footer__socials socials-col-footer">
-                <a href="#" class="socials-col-footer__link">
+                <a
+                  href="https://www.facebook.com/"
+                  class="socials-col-footer__link"
+                  target="_blank"
+                >
                   <svg
                     width="10"
                     height="19"
@@ -269,7 +273,7 @@
                     />
                   </svg>
                 </a>
-                <a href="#" class="socials-col-footer__link">
+                <a href="https://twitter.com/" class="socials-col-footer__link" target="_blank">
                   <svg
                     width="19"
                     height="16"
@@ -283,7 +287,11 @@
                     />
                   </svg>
                 </a>
-                <a href="#" class="socials-col-footer__link">
+                <a
+                  href="https://www.linkedin.com/"
+                  class="socials-col-footer__link"
+                  target="_blank"
+                >
                   <svg
                     width="19"
                     height="19"
